Prevent long vertical ticks to overflow below the resize handle

--- a/multiqc/templates/plotly/assets/css/default_multiqc.css
+++ b/multiqc/templates/plotly/assets/css/default_multiqc.css
@@ -918,16 +918,17 @@ tbody .sorthandle {
 }
 .hc-plot-handle {
   position: absolute;
-  bottom: 0;
   width: 100%;
   height: 10px;
   background-color: #dedede;
   cursor: row-resize;
-  padding: 1px 0;
   border-top: 1px solid #ededed;
   -moz-transition: background-color 0.1s;
   -webkit-transition: background-color 0.1s;
   transition: background-color 0.1s;
+  /* two lines below are a hack to hide hanging plotly long vertical tick labels */
+  border-bottom: 2px solid white;
+  bottom: -3px;
 }
 .hc-plot-handle span {
   display: block;
@@ -1019,7 +1020,7 @@ g.annotation {
 
 .created-with-multiqc {
   position: absolute;
-  bottom: 10px;
+  bottom: 7px;
   right: 4px;
   margin-bottom: 0;
   padding: 0;
